# lox

./: .bazeliskrc  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  maven_install.json
.github/workflows/: bazel_test.yml
clox/src/: BUILD.bazel  chunk.c  chunk.h  common.h  compiler.c  debug.c  debug.h  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
clox/test/: BUILD.bazel  calculator_test.cc  opcode_test.cc
clox/test/boolean/: BUILD.bazel  compare_test.cc
clox/test/programs/: BUILD.bazel  and_or_conditions.lox  breakfast_test.lox  coffee.lox  cruller.lox  escaping_local.lox  evil_closure.lox  expected_and_or_conditions.output  expected_breakfast_test.output  expected_closed_upvalues.output  expected_closure_start.output  expected_coffee.output  expected_cruller.output  expected_escaping_local.output  expected_fib.output  expected_first_condition.output  expected_for_loop.output  expected_function_add.output  expected_inner_outer_local_test.output  expected_instance_math.output  expected_jane_name.output  expected_lots_of_prints_test.output  expected_math_boolean_test.output  expected_procedure.output  expected_scone.output  expected_super_closure.output  fib.lox  fib.output  first_condition.lox  for_loop.lox  inner_outer_local_test.lox  jane_name.lox  lots_of_prints_test.lox  math_boolean_test.lox  procedure.lox  scone.lox  super_closure.lox  while_loop.lox
clox/test/scanner/: BUILD.bazel  keywords_test.cc  simple_tokens_test.cc
jlox/src/main/com/craftinginterpreters/lox/: AstPrinter.java  BUILD.bazel  Continue.java  Environment.java  Expr.java  Interpreter.java  Lox.java  LoxCallable.java  LoxFunction.java  Parser.java  Resolver.java  RuntimeError.java  Scanner.java  Stmt.java  Token.java  TokenType.java
jlox/src/test/com/craftinginterpreters/lox/: AstPrinterTest.java  BUILD.bazel  BasicParserTest.java  BasicTokensScanTest.java  BlockEndToEndTest.java  ConditionalTest.java  FunctionTest.java  InterpreterTest.java  ParseErrorsTest.java  PrintStmtTest.java  ResolverEnd2EndTest.java  ResolverForLoopTest.java  RuntimeErrorsTest.java  expected-query-output
