bazel_dep(name = "apple_rules_lint", version = "0.4.0")
linter = use_extension("@apple_rules_lint//lint:extensions.bzl", "linter")
linter.configure(name = "java-checkstyle", config = "@contrib_rules_jvm//java:checkstyle-default-config")
linter.configure(name = "java-spotbugs", config = "@contrib_rules_jvm//java:spotbugs-default-config")
use_repo(linter, "apple_linters")

bazel_dep(name = "contrib_rules_jvm", version = "0.28.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "gazelle", version = "0.42.0")
bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "rules_java", version = "8.11.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    boms = [
        "org.junit:junit-bom:5.12.2"
    ],
    artifacts = [
        "org.junit.jupiter:junit-jupiter-api",
        "org.junit.jupiter:junit-jupiter-engine",
        "org.junit.platform:junit-platform-launcher",
        "org.junit.platform:junit-platform-reporting",
        "org.junit.jupiter:junit-jupiter-params",
        "org.junit.vintage:junit-vintage-engine",
    ],
    fetch_sources = True,
    lock_file = "//:maven_install.json",
    fail_if_repin_required = True,
)
use_repo(maven, "maven")
