load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "src",
    srcs = [
        "chunk.c",
        "compiler.c",
        "debug.c",
        "memory.c",
        "object.c",
        "scanner.c",
        "value.c",
        "vm.c",
    ],
    hdrs = [
        "chunk.h",
        "common.h",
        "compiler.h",
        "debug.h",
        "memory.h",
        "object.h",
        "scanner.h",
        "value.h",
        "vm.h",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "main",
    srcs = ["main.c"],
    deps = [":src"],
)
