load("@contrib_rules_jvm//java:defs.bzl", "checkstyle_test")
load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "lox",
    srcs = [
        "Break.java",
        "Continue.java",
        "Environment.java",
        "Expr.java",
        "Interpreter.java",
        "Lox.java",
        "LoxCallable.java",
        "LoxFunction.java",
        "Parser.java",
        "Return.java",
        "RuntimeError.java",
        "Scanner.java",
        "Stmt.java",
        "Token.java",
        "TokenType.java",
    ],
    visibility = ["//:__subpackages__"],
)

java_binary(
    name = "Lox",
    main_class = "com.craftinginterpreters.lox.Lox",
    visibility = ["//visibility:public"],
    runtime_deps = [":lox"],
)

checkstyle_test(
    name = "lox_checkstyle",
    srcs = [":lox"],
)
