load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@contrib_rules_jvm//java:defs.bzl", "checkstyle_test", "java_test_suite")

genquery(
    name = "generated_targets",
    expression = "kind(java_test, deps(//jlox/src/test/com/craftinginterpreters/lox:lox))",
    opts = ["--output=label_kind"],
    scope = ["//jlox/src/test/com/craftinginterpreters/lox"],
)

diff_test(
    name = "diff_test",
    file1 = ":generated_targets",
    file2 = ":expected-query-output",
)

checkstyle_test(
    name = "lox_test_checkstyle",
    srcs = ["BasicTokensScanTest.java"],
)

java_test_suite(
    name = "lox",
    srcs = [
        "AstPrinterTest.java",
        "BasicTokensScanTest.java",
    ],
    runner = "junit5",
    runtime_deps = [
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_reporting",
        "@maven//:org_junit_vintage_junit_vintage_engine",
    ],
    deps = [
        "//jlox/src/main/com/craftinginterpreters/lox",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_params",
    ],
)
