load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@contrib_rules_jvm//java:defs.bzl", "checkstyle_test", "java_test_suite")

genquery(
    name = "generated_targets",
    expression = "kind(java_test, deps(//jlox/src/test/com/craftinginterpreters/lox:lox))",
    opts = ["--output=label_kind"],
    scope = ["//jlox/src/test/com/craftinginterpreters/lox"],
)

diff_test(
    name = "diff_test",
    file1 = ":generated_targets",
    file2 = ":expected-query-output",
)

checkstyle_test(
    name = "lox_test_checkstyle",
    srcs = [
        "BasicTokensScanTest.java",
        "BlockEndToEndTest.java",
        "ConditionalTest.java",
        "FunctionTest.java",
        "InterpreterTest.java",
        "ParseErrorsTest.java",
        "PrintStmtTest.java",
        "RuntimeErrorsTest.java",
    ],
)

# hamcrest moved from `core` -> `just hamcrest`
# gazelle:resolve java org.hamcrest @maven//:org_hamcrest_hamcrest
java_test_suite(
    name = "lox",
    srcs = [
        "BasicTokensScanTest.java",
        "BlockEndToEndTest.java",
        "ConditionalTest.java",
        "FunctionTest.java",
        "InterpreterTest.java",
        "ParseErrorsTest.java",
        "PrintStmtTest.java",
        "ResolverEnd2EndTest.java",
        "ResolverForLoopTest.java",
        "RuntimeErrorsTest.java",
    ],
    runner = "junit5",
    runtime_deps = [
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_reporting",
    ],
    deps = [
        "//jlox/src/main/com/craftinginterpreters/lox",
        "@maven//:com_github_stefanbirkner_system_lambda",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_params",
    ],
)
